# Music-Recommendation-System

./: .gitignore  README.md  als_model.py  app.py  cache.py  content_based.py  database.py  ensemble.py  fetch_real_music_data.py  main.py  music_rec_structure.md  pyproject.toml  readme.md  requirements.txt  train.py
mrsenv/: pyvenv.cfg
mrsenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  numba
src/: __init__.py  music_content_based.py  music_ensemble.py  music_matrix_fact.py
src/infra/: redis_client.py
src/train/: __init__.py  train.py
