[tool.poetry]
name = "music-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Emmanuel Osabutey <tettehosabutey49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"